--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '1.0'
-group = 'net.cji.boomarrow' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = '0.1'
+group = 'cji.boomarrow'
 archivesBaseName = 'boomarrow'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -20,10 +20,10 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'examplemod'
+            property 'forge.enabledGameTestNamespaces', 'boomarrow'
 
             mods {
-                examplemod {
+                boomarrow {
                     source sourceSets.main
                 }
             }
@@ -34,10 +34,10 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'examplemod'
+            property 'forge.enabledGameTestNamespaces', 'boomarrow'
 
             mods {
-                examplemod {
+                boomarrow {
                     source sourceSets.main
                 }
             }
@@ -48,10 +48,10 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'examplemod'
+            property 'forge.enabledGameTestNamespaces', 'boomarrow'
 
             mods {
-                examplemod {
+                boomarrow {
                     source sourceSets.main
                 }
             }
@@ -62,10 +62,10 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'boomarrow', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                examplemod {
+                boomarrow {
                     source sourceSets.main
                 }
             }
@@ -85,12 +85,12 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "examplemod",
-                "Specification-Vendor"    : "examplemodsareus",
+                "Specification-Title"     : "Boom Arrow",
+                "Specification-Vendor"    : "C J Ingle",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "examplemodsareus",
+                "Implementation-Vendor"   : "C J Ingle",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
