--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml" #mandatory
 loaderVersion="[43,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
-license="All rights reserved"
+license="GNU GPLv3"
 issueTrackerURL="https://github.com/Eruc0lind0/boom_arrow/issues" #optional
 
 [[mods]] #mandatory
