--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ jar {
         attributes([
                 "Specification-Title"     : "Boom Arrow",
                 "Specification-Vendor"    : "C J Ingle",
-                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Specification-Version"   : "1",
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "C J Ingle",
